# WeatherStationClient

./: .dockerignore  Dockerfile  HowToRunWeatherStation.md  Jenkinsfile  README.md
sensor_interface/: CMakeLists.txt  conanfile.py
sensor_interface/WebInterface/: Anokhi_CV.html  Contact-Anokhi.html  index.html  index2.html  startPage.html
sensor_interface/externalLib/: CMakeLists.txt
sensor_interface/externalLib/paho.mqtt.c/: CMakeLists.txt
sensor_interface/externalLib/paho.mqtt.cpp/: CMakeLists.txt
sensor_interface/headers/: PressureHelper.hpp  PressurePublisher.hpp  PressureScale.hpp  PressureSensor.hpp  TemperaturePublisher.hpp  TemperatureScale.hpp  TemperatureSensor.h  TemperatureSensor.hpp  WeatherSensorInterface.h  WeatherSensorInterface.hpp  enums.hpp  mqtt_client.hpp  sensor_data_paths.h
sensor_interface/src/: CMakeLists.txt  PressureHelper.cpp  PressurePublisher.cpp  PressureScale.cpp  PressureSensor.cpp  TemperaturePublisher.cpp  TemperatureScale.cpp  TemperatureSensor.cpp  main.cpp  mqtt_client.cpp
sensor_interface/test/unit_tests/: CMakeLists.txt  TemperatureScaleTest.cpp  TemperatureSensorMock.hpp  mqtt_client_test.cpp  read_temperature_test.cpp  temperature_publisher_test.cpp
sensor_interface/tools/: check_clang_format.py  clang_formatter.py
