cmake_minimum_required(VERSION 3.1)
project(sensor_interface VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(src)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wpedantic -Werror -Wextra")
IF(CMAKE_BUILD_TYPE MATCHES Release)
	message("Building project Sensor Interface ${VERSION}")
	message(STATUS "CXX Flags used: ${CMAKE_CXX_FLAGS_RELEASE}")
ELSEIF(CMAKE_BUILD_TYPE MATCHES Debug)
	message("Building project Sensor Interface with tests")
	message(STATUS "CXX Flags used: ${CMAKE_CXX_FLAGS_DEBUG}")
	enable_testing()
	add_subdirectory(test/unit_tests)
	IF(COVERAGE)
	message("Building project Sensor Interface test coverage")
	ENDIF()
ELSE()
 	 message("Some other build type.")
ENDIF()

message(STATUS "c++ flags : ${CMAKE_CXX_FLAGS}")
